fixed text overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,10 +153,9 @@ input#pages {
     justify-content: space-evenly;
     align-items: center;
     border-radius: 20px;
-    transition: background 0.45s ease-in-out;
     flex: 0 0 auto;
+    transition: background 0.45s ease-in-out, border 0.15s ease-out;
     font-family: 'Libre Baskerville', serif;
-    transition: border 0.15s ease-out;
 }
 
 .card:hover{
@@ -164,7 +163,9 @@ input#pages {
 }
 
 .card p {
+    max-width: 100%;
     text-align: center;
+    word-wrap: break-word;
 }
 
 .book-status {
@@ -217,7 +218,7 @@ input#pages {
 }
 
 .book-card-not-read {
-    background: rgb(248, 89, 89);
+    background: rgb(255, 100, 100);
     color: white;
 }
 
